--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+absl-py==2.3.1
 annotated-types==0.7.0
-anyascii==0.3.3
+astunparse==1.6.3
 blis==1.3.3
 catalogue==2.0.10
 certifi==2025.11.12
@@ -9,43 +10,132 @@ cloudpathlib==0.23.0
 colorama==0.4.6
 confection==0.1.5
 contourpy==1.3.3
-contractions==0.1.73
 cycler==0.12.1
 cymem==2.0.13
+durationpy==0.10
+fastjsonschema==2.21.2
+filetype==1.2.0
+flatbuffers==25.9.23
 fonttools==4.61.1
+gast==0.7.0
+gensim==4.4.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.15.1
 idna==3.11
 Jinja2==3.1.6
+joblib==1.5.3
+jupyterlab_widgets==3.0.16
+keras==3.13.0
 kiwisolver==1.4.9
+lark==1.3.1
+libclang==18.1.1
+lxml==6.0.2
+Markdown==3.10
+markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 matplotlib==3.10.8
+mdurl==0.1.2
+mistune==3.1.4
+ml_dtypes==0.5.4
+mmh3==5.2.0
+mpmath==1.3.0
 murmurhash==1.0.15
+mypy_extensions==1.1.0
+namex==0.1.0
+nest-asyncio==1.6.0
+networkx==3.6.1
+nltk==3.9.2
 numpy==2.3.5
+oauthlib==3.3.1
+olefile==0.47
+opt_einsum==3.4.0
+optree==0.18.0
+orjson==3.11.5
+ormsgpack==1.12.1
+overrides==7.7.0
 packaging==25.0
 pandas==2.3.3
+pandocfilters==1.5.1
+parso==0.8.5
+pathspec==0.12.1
 pillow==12.0.0
+platformdirs==4.5.1
+pluggy==1.6.0
 preshed==3.0.12
-pyahocorasick==2.2.0
+prometheus_client==0.23.1
+protobuf==6.33.2
+psutil==7.1.3
+pure_eval==0.2.3
+pyasn1==0.6.1
+pybase64==1.4.3
+pycparser==2.23
 pydantic==2.12.5
 pydantic_core==2.41.5
+Pygments==2.19.2
 pyparsing==3.2.5
+pypdf==6.4.2
+PyPika==0.48.9
+pyproject_hooks==1.2.0
+pyreadline3==3.5.4
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+python-iso639==2025.11.16
+python-json-logger==4.0.0
+python-magic==0.4.27
+pytokens==0.3.0
 pytz==2025.2
+pywinpty==3.0.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+RapidFuzz==3.14.3
+regex==2025.11.3
 requests==2.32.5
-seaborn==0.13.2
+rfc3986-validator==0.1.1
+rich==14.2.0
+rpds-py==0.30.0
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.16.3
+Send2Trash==1.8.3
+shellingham==1.5.4
 six==1.17.0
 smart_open==7.5.0
+sniffio==1.3.1
+soupsieve==2.8
 spacy==3.8.11
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.5.2
-textsearch==0.0.24
+sympy==1.14.0
+tenacity==9.1.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.3.0
 thinc==8.3.10
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tornado==6.5.3
 tqdm==4.67.1
-typer-slim==0.20.0
+traitlets==5.14.3
+typer-slim==0.20.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.3
-urllib3==2.6.2
+uri-template==1.3.0
+urllib3==2.3.0
+uuid_utils==0.12.0
 wasabi==1.1.3
+wcwidth==0.2.14
 weasel==0.4.3
+webcolors==25.10.0
+webencodings==0.5.1
+websocket-client==1.9.0
+websockets==15.0.1
+Werkzeug==3.1.4
+widgetsnbextension==4.0.15
 wrapt==2.0.1
+xxhash==3.6.0
+zipp==3.23.0
+zstandard==0.25.0
